# Ians-Racing-Model

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
app/: streamlit_app.py
app/pages/: 1_Todays_cards.py  2_Top_selections.py  3_Results.py  4_Model_performance.py  5_Settings.py  6_Backtesting.py  7_Daily_edge_card.py  8_Backtest_calibration.py  9_Ian_Model_trial.py  9_Ian_Racing_Intelligence.py
config/: course_profiles.yaml  model_weights.yaml  providers.yaml  race_type_profiles.yaml
migrations/: README.md
pages/: 1_Todays_cards.py  2_Top_selections.py  3_Results.py  4_Model_performance.py  5_Settings.py  6_Backtesting.py  7_Daily_edge_card.py  8_Backtest_calibration.py  9_Ian_Model_trial.py  9_Ian_Racing_Intelligence.py
sample_data/: mock_racecard.json
src/ian_racing_model/: __init__.py  acca.py  analysis_engines.py  calibration_rules.py  config.py  domain.py  edge.py  edge_lab.py  edge_quality.py  ian_index.py  outsider.py  results_summary.py  services.py  table_styles.py  ui.py
src/ian_racing_model/model/: scoring.py
src/ian_racing_model/providers/: base.py  factory.py  mapping.py  mock.py  the_racing_api.py
src/ian_racing_model/storage/: db.py
src/racing_intelligence/: __init__.py  tracking.py
src/racing_intelligence/domain/: __init__.py  analysis.py
src/racing_intelligence/scoring/: v5.py  (+3 more)
tests/: test_calibration_gates.py  test_edge.py  test_ian_index.py  test_model.py  test_racing_intelligence.py  test_results_summary.py
(+3 files in other folders)
