[project]
name = "ian-racing-model"
version = "0.1.0"
description = "Read-only UK horse-racing research dashboard with configurable runner scoring."
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.59.1",
    "SQLAlchemy==2.0.51",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "pyarrow==22.0.0",
    "requests==2.34.2",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
